--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "web",
+  "name": "@tinypath/web",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -9,18 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
+    "@clerk/nextjs": "^4.16.4",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-toolbar": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.5",
+    "class-variance-authority": "^0.5.2",
+    "clsx": "^1.2.1",
+    "nanoid": "^4.0.2",
+    "next": "^13.3.1",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^2.1.5",
+    "tailwind-merge": "^1.12.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "config": "*",
-    "database": "*",
+    "@svgr/webpack": "^7.0.0",
+    "@tinypath/config": "*",
+    "@tinypath/database": "*",
+    "@tinypath/tsconfig": "*",
+    "@types/node": "^18.16.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "autoprefixer": "^10.4.14",
     "eslint": "^7.32.0",
-    "tsconfig": "*",
-    "typescript": "^4.5.3"
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4"
   }
 }
