--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.3"
+  }
 }
