--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "database",
+  "name": "@tinypath/database",
   "version": "1.0.0",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -24,16 +24,16 @@
     "studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^3.10.0"
+    "@prisma/client": "^4.13.0"
   },
   "devDependencies": {
-    "config": "*",
-    "eslint": "^8.12.0",
-    "prisma": "^3.10.0",
-    "rimraf": "^3.0.2",
-    "tsconfig": "*",
-    "tsup": "^5.11.13",
-    "tsx": "^3.7.1",
-    "typescript": "^4.5.5"
+    "@tinypath/config": "*",
+    "@tinypath/tsconfig": "*",
+    "eslint": "^8.39.0",
+    "prisma": "^4.13.0",
+    "rimraf": "^5.0.0",
+    "tsup": "^6.7.0",
+    "tsx": "^3.12.6",
+    "typescript": "^5.0.4"
   }
 }
