--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -13,14 +13,14 @@
     "clean": "rimraf .turbo node_modules dist",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:migrate:dev": "prisma migrate dev",
-    "db:push": "prisma db push",
+    "db:push": "prisma db push --skip-generate",
     "db:seed": "tsx src/seed.ts",
     "dev": "tsup --watch",
     "format": "prisma format",
-    "generate": "prisma generate",
+    "db:generate": "prisma generate",
     "lint": "eslint \"src/**/*.ts\"",
-    "prebuild": "npm run generate",
-    "predev": "npm run generate",
+    "prebuild": "npm run db:generate",
+    "predev": "npm run db:generate",
     "studio": "prisma studio"
   },
   "dependencies": {
