--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
-  "globalEnv": ["NODE_ENV", "BASE_URL"],
+  "globalEnv": ["NODE_ENV", "BASE_URL", "VERCEL_URL"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
