--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tooltip": "^1.0.5",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
+    "json-2-csv": "^4.0.0",
     "nanoid": "^4.0.2",
     "next": "^13.3.1",
     "next-themes": "^0.2.1",
