--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-toolbar": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.5",
+    "@tanstack/react-query": "^4.29.5",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "json-2-csv": "^4.0.0",
@@ -24,8 +25,8 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "server-only": "^0.0.1",
-    "swr": "^2.1.5",
     "tailwind-merge": "^1.12.0",
     "zod": "^3.21.4"
   },
