--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "playwright test",
+    "test:e2e:debug": "PWDEBUG=console playwright test"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.16.4",
+    "@faker-js/faker": "^7.6.0",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-label": "^2.0.1",
@@ -31,6 +34,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.33.0",
     "@svgr/webpack": "^7.0.0",
     "@tinypath/config": "*",
     "@tinypath/database": "*",
@@ -40,6 +44,7 @@
     "@types/react-dom": "^18.2.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^7.32.0",
+    "playwright": "^1.33.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
