--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:e2e": "playwright test",
-    "test:e2e:debug": "PWDEBUG=console playwright test"
+    "test:e2e": "PWDEBUG=console playwright test"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.16.4",
