--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,5 @@
 
 # Defaults to the local database deployed from the `docker-compose.yml` stack
 
+BASE_URL="http://localhost:3000"
 DATABASE_URL="postgresql://root:sonaisawesome@127.0.0.1:5432/tinypath"
